resolve some bugs

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </div>
     <div id="mobile">
        <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
+         <i id="bar" class="fas fa-bars"></i>
     </div>
     
 </section>
