--- a/cart.html
+++ b/cart.html
@@ -25,12 +25,12 @@
             <a class="active" href="cart.html" id="lg-cart"
               ><i class="fas fa-shopping-cart"></i></a>
           </li>
-          <a href="#" id="close"><i class="far fa-times"></i></a>
+          <a href="#" id="close"><i class="fas fa-times"></i></a>
         </ul>
       </div>
       <div id="mobile">
         <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
+         <i id="bar" class="fas fa-bars"></i>
       </div>
     </section>
 
