--- a/sproduct.html
+++ b/sproduct.html
@@ -26,12 +26,12 @@
               ><i class="fa-regular fa-bag-shopping"></i
             ></a>
           </li>
-          <a href="#" id="close"><i class="far fa-times"></i></a>
+          <a href="#" id="close"><i class="fas fa-times"></i></a>
         </ul>
       </div>
       <div id="mobile">
         <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
+         <i id="bar" class="fas fa-bars"></i>
       </div>
     </section>
 
